--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <div class="content">
       <div class="col"> <img src="./img/arrow.png" alt="">
-        <div class="col__photo"> <img src="/img/photo.png" alt="" class="col__img">
+        <div class="col__photo"> <img src="./img/photo.png" alt="" class="col__img">
           <div class="border"></div>
         </div>
       </div>
